--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+### Datasource info
+spring.datasource.url=jdbc:mysql://localhost:3306/myretail_products?servetTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
