--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+# Liquibase
+##liquibase.enabled=true
+spring.liquibase.change-log=classpath:/database/liquibase/change-logs/changelog-master.xml
