--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 
 ### Datasource info
-spring.datasource.url=jdbc:mysql://localhost:3306/myretail_products?servetTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/myretail_products?servetTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+spring.datasource.url = jdbc:h2:file:./src/main/resources/database/h2-data/h2-data-backup;MODE=MYSQL
+spring.datasource.username = sa
+spring.datasource.driverClassName = org.h2.Driver
+spring.jpa.show-sql = true
+spring.jpa.properties.format-sql = true
+spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled = true
 
 
 # Liquibase
